--- a/parts/guide.tex
+++ b/parts/guide.tex
@@ -64,6 +64,7 @@ After these kinematic cuts then the H $\rightarrow b\bar{b}$ is exploited to inc
 %  Need to link lib with EUTelescope with 
 %  -DBoost_NO_BOOST_CMAKE=ON
 
+\section{CxAODMaker} 
 
 
 
