--- a/thesis.tex
+++ b/thesis.tex
@@ -25,7 +25,7 @@
 
 \usepackage{notoccite}
 \usepackage{setspace}
-
+\usepackage{multicol}
 \usepackage{enumerate}
 \usepackage{feynmf}
 \usepackage{graphicx}
